--- a/portfolio-bootstrap.html
+++ b/portfolio-bootstrap.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap_portfolio.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <title>Brian Helgeson's Portfolio</title>
   </head>
   <body>
